2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	* Message.cs : state is set only after WriteBodyContents().

2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : eliminate wrong use of
	  ReadElementContentAsString() (it is not always simple string).

2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : when the value is null, do not try to
	  deserialize EndpointAddress.

2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	 * MessageHeader.cs : add Value property. (Forgot dependent change.)

2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	 * MessageHeaders.cs : GetHeader<T>() could mostly skip extra
	   serialization and deserialization of values.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs : handle Welcome and Refuse at client side.
	  Now simply use connector contract.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs : handle Disconnect(). Fix URLs a bit.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpChannelListener.cs : do not try to compare dead connection's
	  IPEndPoint (it raises an error).

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : allow null header value on each specific setter.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelBase.cs, TcpDuplexSessionChannel.cs :
	  get local and remote address of connected counterpart to get
	  callback channel connected.
	* PeerDuplexChannel.cs : remove FIXME wrt above.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs : add fixme comment and remove extra FIXME.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs : fill IsReferenceParameter.

2009-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ReplyChannelBase.cs, TcpReplyChannel.cs, HttpReplyChannel.cs:
	  implement remaining async methods and LocalAddress.

2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>
